--- a/2024-05-28 키워드 정리.md
+++ b/2024-05-28 키워드 정리.md
@@ -33,7 +33,7 @@ ClassName : 첫 문장은 항상 대문자여야 한다.
 아스키 코드(ASCII) : 숫자와 영문, 특수 문자(연산 등)를 표현한 부호
 유니코드 :  아스키 코드 + 여러 국가의 언어를 표현한 부호
 문자열(String) : 문자들의 집합
-정수(Integer) : 음수와 소수가 아닌 숫자
+정수(Integer) : 양의 부호와 음의 부호가 붙어있는 자연수, 0도 포함
 연산자("+","-","*","/") : 산술 연산을 할 때 필요
 
 ----
