--- a/2024-05-28 키워드 정리.md
+++ b/2024-05-28 키워드 정리.md
@@ -1,14 +1,14 @@
 ### java
 
-JDK : 자바 프로그램을 사용할 수 있게 하는 도구들 , jre 포함
-JRE : 자바 개발 환경, jvm 포함
-JVM : byte code를 OS와 CPU에 상관없이 실행 시켜주는 가상 머신
+- JDK : 자바 프로그램을 사용할 수 있게 하는 도구들 , jre 포함
+- JRE : 자바 개발 환경, jvm 포함
+- JVM : byte code를 OS와 CPU에 상관없이 실행 시켜주는 가상 머신
 
-Byte code : 고급언어로 작성된 소스코드를 가상머신이 이해할 수 있는 중간 코드로 컴파일 한 것
-Compile : 인간이 사용하는 고급 언어를 기계가 인식할 수 있는 기계어(저급 언어)로 번역
-javac : java 파일을 byte code의 class 파일로 컴파일
-java : 파일 실행
-encoding : 맞는 언어 구조로 변경
+- Byte code : 고급언어로 작성된 소스코드를 가상머신이 이해할 수 있는 중간 코드로 컴파일 한 것
+- Compile : 인간이 사용하는 고급 언어를 기계가 인식할 수 있는 기계어(저급 언어)로 번역
+- javac : java 파일을 byte code의 class 파일로 컴파일
+- java : 파일 실행
+- encoding : 맞는 언어 구조로 변경
 
 ----
 
@@ -19,22 +19,22 @@ encoding : 맞는 언어 구조로 변경
     문장(statement);
    }
 }
-class : 객체를 만들기 위한 틀
-ClassName : 첫 문장은 영단어로 작성, 항상 대문자로 시작하여야 한다.
-메인 메소드 : class 내부에 존재,  프로그램이 제일 먼저 실행되어야 하는 함수
-문장(statement) : 컴퓨터가 수행해야 할 동작, 문장의 끝에는 세미콜론(;) 사용
-// : 주석(comment) : 코드를 작성 후, 다른 사람이 쉽게 이해할 수 있게 문장의 해석을 적음
+- class : 객체를 만들기 위한 틀
+- ClassName : 첫 문장은 영단어로 작성, 항상 대문자로 시작하여야 한다.
+- 메인 메소드 : class 내부에 존재,  프로그램이 제일 먼저 실행되어야 하는 함수
+- 문장(statement) : 컴퓨터가 수행해야 할 동작, 문장의 끝에는 세미콜론(;) 사용
+- // : 주석(comment) : 코드를 작성 후, 다른 사람이 쉽게 이해할 수 있게 문장의 해석을 적음
 				 대상 문장의 위에 적는 것이 보통, 문장의 옆에 적는 것도 가능  
-/*  \*/  : 주석의 범위를 늘려줌
+- /*  \*/  : 주석의 범위를 늘려줌
 
 ----
 ### 문자
 
-아스키 코드(ASCII) : 숫자와 영문, 특수 문자(연산 등)를 표현한 부호
-유니코드 :  아스키 코드 + 여러 국가의 언어를 표현한 부호
-문자열(String) : 문자들의 집합
-정수(Integer) : 양의 부호와 음의 부호가 붙어있는 자연수, 0도 포함
-산술 연산자("+","-","\*","/") : 산술 연산을 할 때 필요
+- 아스키 코드(ASCII) : 숫자와 영문, 특수 문자(연산 등)를 표현한 부호
+- 유니코드 :  아스키 코드 + 여러 국가의 언어를 표현한 부호
+- 문자열(String) : 문자들의 집합
+- 정수(Integer) : 양의 부호와 음의 부호가 붙어있는 자연수, 0도 포함
+- 산술 연산자("+","-","\*","/") : 산술 연산을 할 때 필요
 
 
 ----
