변수와 자료형 및 데이터

--- a/2024-05-29 키워드 정리.md
+++ b/2024-05-29 키워드 정리.md
@@ -70,7 +70,7 @@
 ### 데이터 단위
 
 - 비트 : 데이터의 최하위 단위, 이진법 표기 시 하나의 자릿수를 의미(0과 1)
-- 바이트 : 컴퓨터가 조작하는 정보의 최소 처리 단위,  2의 0승
+- 바이트 : 8개 비트를 그룹화한 것, 1바이트 = 8비트, 2의 0승
 - 킬로 바이트 :  1키로 바이트 = 1024바이트, 2의 10승
 - 메가 바이트 : 1메가 바이트 = 1024킬로 바이트, 2의 20승
 - 기가 바이트 : 1기가 바이트 = 1024메가 바이트, 2의 30승
